--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 
       <div class="btns">
         <a class="btn btn-call" href="tel:+919500450826">📞 Call Now: 9500450826</a>
-        <a class="btn btn-wa" href="https://wa.me/919500450826" target="_blank">💬 WhatsApp Now</a>
-      </div>
+        <a class="btn btn-wa" href="https://wa.me/+919500450826" target="_blank">💬 WhatsApp Now</a>
+       </div>
 
       <div class="contactline">
         📍 Location: <b>Salem, Tamil Nadu</b>
