--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="btns">
         <a class="btn btn-call" href="tel:+919500450826">📞 Call Now: 9500450826</a>
         <a class="btn btn-wa" href="https://wa.me/+919500450826" target="_blank">💬 WhatsApp Now</a>
-       </div>
+      </div>
 
       <div class="contactline">
         📍 Location: <b>Salem, Tamil Nadu</b>
@@ -76,14 +76,18 @@
     <div class="card">
   <h2>Services</h2>
 
-  <!-- Services Image -->
-  <img 
-    src="services.png" 
-    alt="Shiva Computer Service - Services"
-    style="width:100%; max-width:900px; border-radius:12px; display:block; margin:12px auto 0;"
-  />
-</div>
-
+  
+<!-- OFFERINGS -->
+    <div class="grid">
+      <div class="card">
+        <h2>What We Offer</h2>
+        <ul>
+          <li>Laptop & Computer Accessories</li>
+          <li>SSD & RAM Upgrade Options</li>
+          <li>Laptop Charger / Keyboard / Mouse</li>
+          <li>Printer Cartridge & Accessories</li>
+          <li>Doorstep Visit Booking in Salem</li>
+        </ul>
 
     <div class="card map" style="margin-top:14px;">
       <h2>Salem Location</h2>
